--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ h1{
     background-color: red;
     font-weight: bold;
     font-size: larger;
+    ;
 
 }
 .number-style{
@@ -39,4 +40,7 @@ button{
     padding: 2em;
     font-size: larger;
     font-weight: bold;
+}
+.selected{
+    background-color: aqua;
 }
