Add some style css selector

--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,44 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 body{
     background-color: aqua;
 }
+header{
+    height:calc( 10vh - 1em);
+    padding-left: 2em;
+    padding-right: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+}
+main{
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+footer{
+    height:calc( 10vh - 1em);
+     display: flex;
+    align-items: center;
+    background-color: white;
+    padding-left: 2em;
+}
+.left{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 h1{
-    text-align: center;
-    margin-bottom: 2rem;
+    margin-left: 1em;
 }
 .container{
     display: flex;
     flex-wrap: wrap;
-    width: 1000px;
-    height: 1000px;
+    width: 80vh;
+    height: 80vh;
     margin: 0 auto;
 
 }
@@ -24,8 +49,8 @@ h1{
     align-items: center;
     width:calc( 100% / 10);
     height: calc(100% /10);
-    border: 2px solid white;
-    background-color: red;
+    border: 1px solid white;
+    background-color: transparent ;
     font-weight: bold;
     font-size: larger;
     ;
@@ -37,10 +62,14 @@ h1{
 
 }
 button{
-    padding: 2em;
-    font-size: larger;
+   
+   padding: 0.5rem;
     font-weight: bold;
 }
 .selected{
-    background-color: aqua;
+    background-color: rgb(29, 75, 192);
+    color: white;
+}
+a{
+    color: blueviolet;
 }
