--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
     background-color: aqua;
 }
 header{
-    height:calc( 10vh - 1em);
+    height:calc( 10vh);
     padding-left: 2em;
     padding-right: 2em;
     display: flex;
@@ -38,8 +38,8 @@ h1{
 .container{
     display: flex;
     flex-wrap: wrap;
-    width: 80vh;
-    height: 80vh;
+    width: 78vh;
+    height: 78vh;
     margin: 0 auto;
 
 }
